--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     testCompile 'junit:junit:4.12'
-    //网络
+    //OKHTTP网络
     compile 'com.squareup.okhttp3:okhttp:3.7.0'
+    //GSON
     compile 'com.google.code.gson:gson:2.2.4'
+    //Glide加载图片
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 }
